# etherium-chat

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  TextBox.h  client.cpp  client.h  main.cpp  window.cpp  window.h
client_tk/: cli.py  console.py  gui.py  message_server_pb2.py  message_server_pb2_grpc.py
common/: foundation.h
ext/: consolelib.cmake
proto/: build.bat  build.sh  build_py.bat  message_server.grpc.pb.cc  message_server.grpc.pb.h  message_server.pb.cc  message_server.pb.h  message_server.proto
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
task/: desc.txt
